front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - image: devbsamy/front:latest
          imagePullPolicy: IfNotPresent
          name: front
      restartPolicy: Always
