server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: devbsamy/server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          command: ["node", "server.js"]
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
