stats-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service
  namespace: flopachat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats-service
  template:
    metadata:
      labels:
        app: stats-service
    spec:
      containers:
        - name: stats-service
          image: devbsamy/stats-service:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
