server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: LoadBalancer
  selector:
    app: server
  ports:
    - port: 8080
      targetPort: 5000
