network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-access
  namespace: flopachat
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: server
        - podSelector:
            matchLabels:
              app: stats-service
      ports:
        - protocol: TCP
          port: 27017
